# sloughGPT

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .pytorch_fix  ADVANCED_REASONING_CHECKPOINT.md  AGENTS.md  AI_STACK.md  API.md  API_REFERENCE.md  CHANGELOG.md  CICD.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  CODEBASE_ANALYSIS_AND_IMPROVEMENT_PLAN.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  DATASET_STANDARDIZATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.gpu  Dockerfile.server  Dockerfile.test  ENTERPRISE_COMPLETE.md  ENTERPRISE_SHOWCASE.md  FILE_DATABASE.json  FINAL_COMPLETE_STATUS_REPORT.md  FINAL_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FOCUSED_COGNITIVE_COMPLETE.md  FOUR_COMPONENT_INTEGRATION_COMPLETE.md  HUGGINGFACE_INTEGRATION_COMPLETE.md  IMPROVEMENTS_EXECUTED.md  (+205 more)
.agents/skills/: SKILL.md
.cursor/rules/: first-senato.mdc  naming-conventions.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  ci_cd.yml  publish.yml  reusable-ci-core.yml
apps/: README.md
apps/api/: README.md
apps/cli/: README.md  cli.py
apps/tui/: README.md  __init__.py  __main__.py  app.py  session.py
apps/web/: .env.example  .gitignore  Dockerfile  README.md  cypress.config.ts  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
archive/third_party_apis/: api_loader.py
archive/wrapper-cython/: README.md  sloughgpt_wrapper.pyx
config/: README.md  datasets.yaml  environment.yml
crates/sloughgpt-grpc/: Cargo.toml  build.rs
crates/sloughgpt-grpc/proto/: inference.proto  training.proto
crates/sloughgpt-grpc/src/: generated.rs  inference_service.rs  lib.rs  trainer_service.rs
crates/sloughgpt-inference/: Cargo.toml
crates/sloughgpt-ipc/: Cargo.toml
crates/sloughgpt-ipc/src/: error.rs  lib.rs  linux.rs  macos.rs  pyo3_bindings.rs  traits.rs  windows.rs
crates/sloughgpt-trainer/: Cargo.toml
crates/sloughgpt-trainer/src/: config.rs  lib.rs  model.rs  optimizer.rs  pyo3_bindings.rs
docker/postgres/: init.sql
docs/: AI_SOFTWARE_ENGINEERING.md  API.md  DATA_STRUCTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_GUIDE.md  ENVIRONMENT.md  FEATURES.md  INSTALL.md  MIGRATION.md  OPENCODE_SKILLS.md  OPENWEBUI_INTEGRATION.md  PORTING_ASM_WASM.md  RAG_ARCHITECTURE.md  RAG_PATTERNS.md  README.md  REPO_STRUCTURE_MIGRATION.md  ROADMAP.md  STRUCTURE.md  TODO.md  llama_rn_integration.md
docs/integration/: CLI_README.md  CONFIG_README.md  (+2 more)
domains/: __init__.py  ai_agent.py  ai_personality.py  ai_personality_metrics.py  conversation_engine.py  learned_personality.py  neural_model.py  neural_personality.py
dset/: README.md  __init__.py  cli.py  core_improvements.py  repo_obtainer.py  stats.py
examples/: chat_app.py  inference.py  lora_train.py  quick_train.py  rag_demo.py  rust_train_protocol.py
experiments/: experiments.json
features/: features.json
infra/: README.md
k8s/: deployment.yaml  ingress.yaml  prometheus.yaml  rbac.yaml
lmtrain/: cli.py  web.py
meta/: Makefile  pyproject.toml  pytest.ini  ruff.toml
models/: README.md  Shakespeare_trained.pt.sou.meta.json  big_data_trained.pt.sou.meta.json  feedback_model_1776145258.pt.sou.meta.json  quick.sou.meta.json  quick_test.pt.json  sloughgpt.meta.json  sloughgpt.sou.meta.json
scripts/: auto_train.py  convert_for_server.py  debug_model.py  demo_conversation_engine.py  demo_training_pipeline.py  dev-stack.sh  diagnostics.py  docker-stack.sh  export_model.py  export_to_gguf.py  export_to_tfjs.py  health_check.py  run_colab_notebook_smoke.sh  self_train.py  self_train_teacher.py  setup.sh  start.sh  unified-log-server.py  validate_dataset_manifest.py  validate_standards_schemas.py  visualize_training.py
server/: demo_server.py  main.py  requirements.txt  settings.py  simple_server.py
sloughgpt/: .env.example  CLI_DOCUMENTATION.md  DISTRIBUTED_TRAINING_GUIDE.md  __init__.py  api_server.py  auth.py  benchmark_suite.py  cli.py  config.py  cost_optimization.py  data_learning.py  distributed_training.py  model_zoo.py  monitoring_dashboard.py  neural_network.py  optimizations.py  reasoning_engine.py  trainer.py  user_management.py  web_interface.html  web_server.py
sloughgpt_sdk/: README.md  __init__.py  auth.py  benchmarks.py  billing.py  cli.py  client.py  dashboard.py  exceptions.py  http_client.py  registry.py  setup.py  websocket.py
standards/: SLOUGHGPT_STANDARD_V1.md
terminal_ui/: Cargo.toml  DEVELOPMENT_SUMMARY.md  FEATURE_UPDATE.md  FINAL_DEVELOPMENT_REPORT.md  FINAL_SUCCESS_REPORT.md  README.md  run.sh  termshell
terminal_ui/src/: main.rs  main_bak.rs  main_working.rs
tests/: README.md  conftest.py  test_api.py  test_auto_train.py  test_benchmarking.py  test_checkpoint_utils.py  test_cli_chat.py  test_cli_local_soul_candidates.py  test_cli_train_api_payload.py  test_cli_train_export_stem.py  test_config.py  test_conversation_engine.py  test_core.py  test_domains_errors.py  test_ewc.py  test_export.py  test_feedback_system.py  test_hf_registry_imports.py  test_inference.py  test_inference_optimizer.py  test_integration.py  test_knowledge_graph.py  test_llama_engine.py  test_lm_eval_char.py  test_optimizations.py  test_optimized_pipeline.py  test_quantization.py  test_rag.py  test_repo_root_package_json.py  test_sdk.py  test_security.py  test_server_main_api.py  test_server_settings.py  test_sloughgpt_colab_notebook.py  test_sloughgpt_trainer_progress_callback.py  test_sloughgpt_trainer_resume.py  test_sloughgpt_trainer_smoke.py  test_soul_engine_conversation.py  test_torch_runtime.py  test_train_sloughgpt_generate_text.py  (+10 more)
tuning/: tuning_jobs.json
typescript-sdk/: package.json  tsconfig.json
web/: .env.example  .gitignore  Dockerfile  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
wrapper/: __init__.py  ai_cli.py  setup.py  sloughgpt_cli.py
(+779 files in other folders)
