[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sloughgpt"
version = "0.1.0"
description = "SloughGPT - Self-hosted LLM infrastructure platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SloughGPT Team", email = "dev@sloughgpt.ai"}
]
keywords = ["llm", "ai", "machine-learning", "pytorch", "transformers", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.19.0",
    "accelerate>=0.25.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "requests>=2.28.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "jsonschema>=4.0.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
gguf = [
    "llama-cpp-python>=0.2.0",
]
mlflow = [
    "mlflow>=2.8.0",
]
wandb = [
    "wandb>=0.16.0",
]
all = [
    "llama-cpp-python>=0.2.0",
    "mlflow>=2.8.0",
    "wandb>=0.16.0",
]

[project.scripts]
sloughgpt = "apps.cli.cli:main"

[project.urls]
Homepage = "https://github.com/iamtowbee/sloughGPT"
Documentation = "https://github.com/iamtowbee/sloughGPT#readme"
Repository = "https://github.com/iamtowbee/sloughGPT"

[tool.setuptools]
package-dir = {"" = "packages/core-py", "apps" = "apps"}

[tool.setuptools.packages.find]
where = ["packages/core-py", "."]
include = ["domains*", "utils*", "apps*"]
exclude = ["tests*", "apps.web*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
# CI lint job uses a smoke subset only (see .github/workflows/reusable-ci-core.yml):
#   ruff check tests/ apps/cli/ apps/api/server/ train_sloughgpt.py packages/core-py/domains/training/checkpoint_utils.py --select E9,F63,F7,F82
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
