[package]
name = "terminal_ui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI dashboard CLI tool for desktop environment monitoring"
authors = ["You <you@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/terminal_ui"
categories = ["command-line-utilities", "terminal", "system"]
keywords = ["tui", "dashboard", "terminal", "cli", "monitoring"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.30.13"
signal-hook = "0.3"
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "terminal_ui"
path = "src/main.rs"