[package]
name = "sloughgpt_grpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[[bin]]
name = "trainer-server"
path = "src/bin/trainer_server.rs"

[[bin]]
name = "inference-server"
path = "src/bin/inference_server.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tonic = "0.12"
prost = "0.13"
prost-build = "0.13"
sloughgpt_trainer = { path = "../sloughgpt-trainer", features = ["pyo3"] }
sloughgpt_ipc = { path = "../sloughgpt-ipc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
target-cpu = "native"
