[package]
name = "sloughgpt_ipc"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "sloughgpt_ipc"
crate-type = ["rlib"]

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]
macos = []
linux = []
windows = []

[target.'cfg(target_os = "macos")'.dependencies]
memmap2 = "0.9"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "namedpipeapi", "handleapi", "fileapi"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
target-cpu = "native"
