[package]
name = "sloughgpt_trainer"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "sloughgpt_trainer"
crate-type = ["rlib"]

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
target-cpu = "native"
